--- a/WebApplication10.csproj
+++ b/WebApplication10.csproj
@@ -7,8 +7,17 @@
 
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.0" />
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.3.0-beta1" />
+    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.*" PrivateAssets="All" />
+    <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="System.Xml.XPath" Version="4.3.0" />
+    <PackageReference Include="Flurl" Version="2.8.0" />
+    <PackageReference Include="Flurl.Http" Version="2.4.0" />
+    <PackageReference Include="ChyImageProcessorCore" Version="1.0.0-*" />
+    <PackageReference Include="Postmark" Version="*" />
+    <PackageReference Include="EPPlus.Core" Version="*" />
+    <PackageReference Include="RavenSharp.Core" Version="*" />
   </ItemGroup>
 
 </Project>
