--- a/WebApplication10.csproj
+++ b/WebApplication10.csproj
@@ -7,6 +7,9 @@
 
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.App"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.0" />
+    
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.3.0-beta1" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.*" PrivateAssets="All" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
